kubernetes/deployment.yaml
# Kubernetes deployment yet to be properly scripted & tested. This is a rough understanding of how the files would work.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flightsyte
  labels:
    app: flightsyte
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flightsyte
  template:
    metadata:
      labels:
        app: flightsyte
    spec:
      containers:
        - name: flightsyte-repo
          image: 408852977582.dkr.ecr.eu-north-1.amazonaws.com/flightsyte:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: flightsyte

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flightsyte-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flightsyte
  template:
    metadata:
      labels:
        app: flightsyte
    spec:
      containers:
        - name: flightsyte
          image: tomdocks7/flightsyte:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
